third_party/rust/chromium_crates_io/vendor/cxx-1.0.150/tests/ui/extern_type_lifetime_bound.stderr
error: lifetime parameter with bounds is not supported yet
 --> tests/ui/extern_type_lifetime_bound.rs:4:26
  |
4 |         type Complex<'a, 'b: 'a>;
  |                          ^^^^^^
